--- a/README
+++ b/README
@@ -6,5 +6,8 @@ To use, navigate to your desired directory (could be your top level) and run the
 python django-unused-templates.py
 ---
 
-It gathers the file names of all .html files that sit in a /templates/ directory, and subdirectories. It then checks all .py files and .html files for an instance of this name. This covers all possible uses of the template file. If the template file is not referenced in any of the other files in your project, it is considered .unused.. The script will display a list of all unused templates.
+It gathers the file names of all .html files that sit in a /templates/ directory, and subdirectories. It 
+then checks all .py files and .html files for an instance of this name. This covers all possible uses of 
+the template file. If the template file is not referenced in any of the other files in your project, it 
+is considered .unused.. The script will display a list of all unused templates. 
 
